# AMOTech_Igloo

./: .gitignore  CMakeLists.txt  Igloo.cc  README.md  construction.cc  construction.hh  detector.cc  generator.cc  generator.hh  physics.hh  run.cc  run.mac  sim.cc
include/: action.hh  construction.hh  detector.hh  generator.hh  run.hh
macros/: run.mac  vis.mac
src/: generator.cc  physics.cc
